--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@cerebras/cerebras_cloud_sdk": "^1.59.0",
         "bcrypt": "^6.0.0",
         "bootstrap": "^5.3.8",
         "connect-mongodb-session": "^5.0.0",
